syntax = "proto3";
package pb;
import "game_code.proto";
import "game_pub.proto";
import "game_type.proto";

// 开始,TODO 数据验证
message CStart
{
    GateType type = 1;//类型
    int32 gateid  = 2;//关卡id
    repeated string ids = 3;//购买ID
}

message SStart
{
    GateData gateInfo = 1; //关卡信息
    ErrCode error = 2;//错误码
}

// 结算数据
message COverData
{
    GateType type = 1;//类型
    int32 gateid  = 2;//关卡id
    int32 star    = 3;//星数
    int32 score   = 4;//分数
}

message SOverData
{
    int32 cardInfo = 1; //卡片奖励次数信息
    GateData gateInfo = 2; //关卡信息
    repeated PropData propInfo = 3; //道具奖励信息
    repeated GateRank rankInfo = 4; //排行信息
    ErrCode error = 5;//错误码
}

// 卡牌
message CCard
{
}

message SCard
{
    int32 leftTimes = 1; //剩余次数
    repeated PropData propInfo = 3; //道具奖励信息
    ErrCode error = 2;//错误码
}

// 登录奖励
message CLoginPrize
{
    PrizeType type  = 1;//
    uint32  day  = 2;//0-6
}

message SLoginPrize
{
    PrizeType type  = 1;//
    repeated LoginPrize list = 2;//
    ErrCode error = 3;//错误码
}

// 使用道具
message CUseProp
{
    PropType ptype = 1;//类型
}

message SUseProp
{
    PropType ptype = 1;//类型
    ErrCode error = 2;//错误码
}

// Share info
message CShareInfo
{
    PrizeType type = 1;//类型
    string  id  = 2;//id
}

message SShareInfo
{
    PrizeType type = 1;//类型
    int32 num = 2;//当天分享次数
    repeated ShareInfo list = 3;//
    ErrCode error = 4;//错误码
}

// Invite info
message CInviteInfo
{
    PrizeType type = 1;//类型
    string  id  = 2;//id
}

message SInviteInfo
{
    PrizeType type = 1;//类型
    int32 num = 2;//当天分享次数
    int32 count = 3;//累计分享次数
    repeated InviteInfo list = 4;//
    ErrCode error = 5;//错误码
}

// Share
message CShare
{
}

message SShare
{
    ErrCode error = 1;//错误码
}

// Invite
message CInvite
{
    string userid = 1;//邀请id
}

message SInvite
{
    ErrCode error = 1;//错误码
}
